--- a/app-android/app/build.gradle
+++ b/app-android/app/build.gradle
@@ -25,10 +25,10 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
+    compile "com.android.support:percent:$rootProject.supportLibraryVersion"
     compile "com.android.support:appcompat-v7:$rootProject.supportLibraryVersion"
     compile "com.android.support:recyclerview-v7:$rootProject.supportLibraryVersion"
     compile "com.android.support:design:$rootProject.supportLibraryVersion"
-    compile "com.android.support:support-v13:$rootProject.supportLibraryVersion"
     compile "com.android.support:support-v4:$rootProject.supportLibraryVersion"
     compile "com.android.support:cardview-v7:$rootProject.supportLibraryVersion"
     compile "com.google.guava:guava:$rootProject.guavaVersion"
@@ -70,4 +70,13 @@ dependencies {
 
     //Space Bottom Navigation
     compile 'com.github.armcha:SpaceNavigationView:1.5.0'
+
+    //FlipView
+    compile 'com.wajahatkarim3.EasyFlipView:EasyFlipView:1.0.1'
+
+    //Page Indicator
+    compile 'com.romandanylyk:pageindicatorview:0.0.9'
+
+    //Android transitions backport
+    compile "com.andkulikov:transitionseverywhere:1.7.0"
 }
