--- a/api/Flashmind.Api/src/Flashmind.Api.Application/project.json
+++ b/api/Flashmind.Api/src/Flashmind.Api.Application/project.json
@@ -6,7 +6,9 @@
   "dependencies": {
      "NETStandard.Library": "1.6.0",
      "Microsoft.EntityFrameworkCore.SqlServer": "1.1.0",
-     "Flashmind.Data": "1.0.0-*"
+     "Flashmind.Data": "1.0.0-*",
+     "AutoMapper": "5.2.0",
+     "RestEase": "1.3.1"
   },
   "frameworks": {
         "netcoreapp1.1": {
