--- a/api/Flashmind.Api/src/Flashmind.Api.Deck/appsettings.json
+++ b/api/Flashmind.Api/src/Flashmind.Api.Deck/appsettings.json
@@ -6,5 +6,17 @@
       "System": "Information",
       "Microsoft": "Information"
     }
+  },
+  "Login": {
+      "Username": "user_deck_api",
+      "Password": "00265ad2997b",
+      "Url": "http://flashmind-user.azurewebsites.net/"
+  },
+  "TokenProviderOptions": {
+        "Issuer": "ETrack",
+        "Audience": "http://flashmind-user.azurewebsites.net"
+  },
+  "ConnectionStrings": {
+        "DefaultConnection": "Server=tcp:flashmind-dev.database.windows.net,1433;Initial Catalog=Flashmind-dev;Persist Security Info=False;User ID=flashmind;Password=00265AD2997b;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   }
 }
