--- a/app-android/build.gradle
+++ b/app-android/build.gradle
@@ -6,7 +6,8 @@ buildscript {
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:2.2.3'
-        classpath 'com.neenbedankt.gradle.plugins:android-apt:1.8'
+        classpath 'me.tatarka:gradle-retrolambda:3.4.0'
+        classpath 'org.greenrobot:greendao-gradle-plugin:3.2.1'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -16,7 +17,10 @@ buildscript {
 allprojects {
     repositories {
         jcenter()
-        maven { url 'http://github.com/wada811/Android-Material-Design-Colors/raw/master/repository/' }
+        maven { url "https://jitpack.io" }
+        maven {
+            url 'http://github.com/wada811/Android-Material-Design-Colors/raw/master/repository/'
+        }
     }
 }
 
